update http response code
